# HCR

./: .gitignore  .gitmodules  Ideas.docx  Interim Report.doc  P3ATs_QuickStartGuide.txt  README.md  Team Meetings.txt  camera holder .ino  camera_holder.ino
Kinect Calibration/camera_info/: depth_0000000000000000.yaml  depth_A00365921194050A.yaml  depth_A00366A06462050A.yaml  rgb_0000000000000000.yaml  rgb_A00365921194050A.yaml  rgb_A00366A06462050A.yaml
src/Turtlesim_joy/: CMakeLists.txt  package.xml
src/Turtlesim_joy/launch/: turtlesim_teleop.launch
src/Turtlesim_joy/src/: .move_circle.py.swp  move_circle.py  turtlesim_joy.py
src/audio_capture/: CMakeLists.txt  package.xml
src/audio_capture/launch/: capture_to_file.launch
src/audio_capture/src/: audio_capture.cpp
src/audio_video/: CMakeLists.txt  package.xml
src/audio_video/launch/: audio_bag.launch
src/audio_video/src/: audio_bag.py  audio_control.py  audio_correct.py  generate.py  start.py  stop.py  video_combine.py  video_control.py
src/camera_holder/sketch_nov28b/: sketch_nov28b.ino
src/camera_holder/sketch_nov28c/: sketch_nov28c.ino
src/cvbridge_tutorial/: CMakeLists.txt  package.xml
src/cvbridge_tutorial/src/: cvbridge_convert
src/filter_laser_scan/: CMakeLists.txt  laser_scan_filter_config.yaml  package.xml
src/filter_laser_scan/src/: laser_scan_filter.cpp
src/gesture/: CMakeLists.txt  package.xml
src/gesture/src/: gesture.py
src/gesture_recognition/: CMakeLists.txt  package.xml
src/gesture_recognition/src/: gesture.py
src/robo_face_tracking/scripts/: detect_face.py  rotate_robot.py
src/robot_face_tracking/: CMakeLists.txt  package.xml
src/robot_face_tracking/scripts/: detect_face.py  rotate_robot.py
src/rosaria_joy/: CMakeLists.txt  package.xml
src/rosaria_joy/launch/: rosaria_joy.launch
src/rosaria_joy/src/: rosaria_joy.py
src/rosaria_keyboard/: CMakeLists.txt  package.xml
src/rosaria_keyboard/src/: rosaria_keyboard.py
src/skeleton_tracker/: CMakeLists.txt  package.xml
src/skeleton_tracker/src/: skeleton_tracker.py  tracking_goal.py
src/tracer/: CMakeLists.txt  package.xml
src/tracer/launch/: av_nav.launch  laser_scan_filter_config.yaml  mapping.launch  nav.launch
src/tracer_nav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml  tracer_nav.launch
src/tracer_nav/launch/: tracer_nav.launch
src/tracer_nav/src/: map1.pgm
src/tracer_navigation_goal/: CMakeLists.txt  package.xml
src/video_recorder/: CMakeLists.txt  package.xml
src/video_recorder/launch/: recorder.launch
src/video_recorder/src/: recorder.py
src/voice_command/: main.py  mic.py  test.py
src/voice_recognition/: CMakeLists.txt  package.xml
src/voice_recognition/src/: Tracer_Tracer.pmdl  main.py  snowboydecoder.py
src/wanderbot/: package.xml
src/wanderbot/src/: follower.py  follower_opencv.py  red_light_green_light.py
