<?xml version="1.0"?>
<package format="2">
  <name>rosaria_keyboard</name>
  <version>1.0.0</version>
  <description>The rosaria_keyboard package</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs.msg</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs.msg</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs.msg</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
