<?xml version="1.0"?>
<package format="2">
  <name>tracer_nav</name>
  <version>0.0.0</version>
  <description>The tracer_nav package</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>
</package>
